# ecopy

./: .gitignore  README.rst  pyproject.toml  setup.py
.github/workflows/: python-package.yml
docs/: cap_method.md
ecopy/: __init__.py  test_ecopy_unittest.py
ecopy/matrix_comp/: __init__.py  anosim.py  asca.py  asca_permute.py  cca.py  fourthcorner.py  mantel.py  rda.py  rlq.py  simper.py
ecopy/ordination/: __init__.py  cap.py  distance.py  mds.py  pcoa.py  transform.py
ecopy/regression/: isoFunc.c  isoregress.py
ecopy/tests/: conftest.py  test_ecopy_unittest.py
tests/: test_cap.py  test_ecopy_unittest.py
