[build-system]
requires = ["setuptools", "wheel", "Cython", "numpy", "matplotlib", "scipy", "pandas"]
build-backend = "setuptools.build_meta"

[project]
name = "ecopy2"
version = "0.1.4.0"
description = "EcoPy: Ecological Data Analysis in Python"
readme = "README.rst"
authors = [
    {name = "Nathan Lemoine", email = "lemoine.nathan@gmail.com"},
]
maintainers = [
    {name = "Chad Saltikov", email = "saltikov@ucsc.edu"},
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
keywords = [
    "ordination",
    "ecology",
    "multivariate data analysis",
    "canonical analysis",
    "distance-based redundancy analysis",
    "dbRDA",
    "CAP",
    "ASCA",
    "ANOVA simultaneous component analysis",
    "microbial ecology",
    "metagenomics",
    "community ecology",
]

dependencies = [
    "cython",
    "numpy",
    "scipy",
    "matplotlib",
    "pandas",
    "patsy",
    "scikit-learn",
    "tqdm>=4.67.3",
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[project.urls]
Homepage = "https://github.com/csaltikov/ecopy"
Repository = "https://github.com/csaltikov/ecopy"
"Bug Tracker" = "https://github.com/csaltikov/ecopy/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
ecopy = [
    "VERSION.txt",
    "ordination/cap.py"
]
"*" = ["*.pyx", "*.pxd"]

[tool.setuptools.packages.find]
where = ["."]
include = ["ecopy*"]
exclude = ["local_scripts*", "tests*"]

[tool.cython]
language_level = "3"
ext_modules = [
    { path = "ecopy/regression/isoFunc.pyx", include_dirs = ["${NUMPY_INCLUDE}"] }
]

[tool.pytest.ini_options]
testpaths = ["ecopy/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
